Adicionando Test Cases, templates e model

--- a/eventex/core/templates/index.html
+++ b/eventex/core/templates/index.html
@@ -1,29 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <title>EventeX</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Bootstrap -->
-    <link href="{{ STATIC_URL }}css/bootstrap.min.css" rel="stylesheet" media="screen">
-    <link href="{{ STATIC_URL }}css/bootstrap-responsive.css" rel="stylesheet">
-    <link type="text/css" href="{{ STATIC_URL }}css/style.css" rel="stylesheet" media="screen" />
-</head>
-<body>
-<div id="wrap">
-    <div class="container">
-        <h1 style="font-family: cursive">E V E N T E X</h1>
-        <br/>
+{% extends 'base.html' %}
+{% block content %}
         <p><b>Bem-vindo ao EventeX!</b></p>
         <p>O melhor evento do Brasil, do Mundo e do Pan-americano!!!</p>
-        <p>Abertura das inscrições no próximo domingo, 28/07/2013</p>
+        <p>Inscrições abertas! <strong><a href="/inscricao/">Inscreva-se já</a></strong></p>
         <p>Para dúvidas e mais informações entre em contato com <a href="mailto:eventex@eventex.com.br">eventex@eventex.com.br</a></p>
-    <hr/>
-        <div id="footer">
-            <div class="container">
-                <p class="muted credit">&copy; 2013 - EventeX, all rights reserved</p>
-            </div>
-        </div>
-   </div>
-</div>
-</body>
-</html>
+{% endblock content %}
